<resources>
    <string name="app_name">MyWeatherApplication</string>
    <string name="today">Today\'s Weather</string>
    <string name="fahrenheight">%sF</string>
    <string name="speed">%smph</string>
    <string name="temp_title">Temperature:</string>
    <string name="speed_title">Wind Speed:</string>
    <string name="feels_like_title_tv">Feels Like:</string>
    <string name="humidity_title_tv">Humidity:</string>
    <string name="pressure_title_tv">Pressure:</string>
    <string name="city_tv">%s, %s</string>
    <!-- search -->
    <string name="search">Search</string>
</resources>