<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/day_tv"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>

    <ImageView
        android:id="@+id/icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/day_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </ImageView>

    <TextView
        android:id="@+id/city_tv"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon_iv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </TextView>

    <TextView
        android:id="@+id/main_tv"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/city_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding"/>

    <TextView
        android:id="@+id/temp_title_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>

    <TextView
        android:id="@+id/temp_tv"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/temp_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding"/>

    <TextView
        android:id="@+id/speed_title_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temp_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>
    <TextView
        android:id="@+id/speed_tv"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/speed_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </TextView>

    <TextView
        android:id="@+id/feels_like_title_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/feels_like_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/speed_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>
    <TextView
        android:id="@+id/feels_like_tv"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/feels_like_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </TextView>

    <TextView
        android:id="@+id/humidity_title_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/humidity_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feels_like_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>
    <TextView
        android:id="@+id/humidity_tv"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/humidity_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </TextView>

    <TextView
        android:id="@+id/pressure_title_tv"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/pressure_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/humidity_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/title_padding">
    </TextView>
    <TextView
        android:id="@+id/pressure_tv"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pressure_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/title_padding">
    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>